name:                sassy
version:             0.1.0.0
synopsis:            Server-side compilation and testing for competitions
description:         Please see README.md
homepage:            https://github.com/NickHu/sassy#readme
license:             BSD3
license-file:        LICENSE
author:              Nick Hu
maintainer:          me@nickhu.co.uk
copyright:           Copyright: © 2016 Nick Hu
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable server
  hs-source-dirs:      server/src
  main-is:             Main.hs
  other-modules:       Api
                     , App
                     , Models
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , aeson
                     , monad-logger
                     , persistent
                     , persistent-sqlite
                     , persistent-template
                     , servant
                     , servant-server
                     , string-conversions
                     , text
                     , warp
  default-language:    Haskell2010

test-suite spec
  type:                exitcode-stdio-1.0
  hs-source-dirs:      server/test
  main-is:             Spec.hs
  build-depends:       base
                     , sassy
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/NickHu/sassy
